--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/LuisMiguelRodriguez/friendFinder/issues"
   },
-  "homepage": "https://github.com/LuisMiguelRodriguez/friendFinder#readme"
+  "homepage": "https://github.com/LuisMiguelRodriguez/friendFinder#readme",
+  "dependencies": {
+    "body-parser": "^1.18.1",
+    "express": "^4.15.4",
+    "path": "^0.12.7"
+  }
 }
